feat: autenticação com clerk

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://neondb_owner:WBqNh20zkCyp@ep-long-poetry-a5bjysi3.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+# clerk
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dGlkeS1tdXNrb3gtNTQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_i881923waRFgu3kd6DaD44NJUigZvsirEEAiG6K4Il
